first version recommendation system with spark

--- a/.gitignore
+++ b/.gitignore
@@ -85,11 +85,7 @@ __pycache__/
 *.so
 
 # Archi
-data/raw/
-data/processing/
-data/final/
-data/aux/
-model/processing/
+data/
 
 # Distribution / packaging
 .Python
